--- a/style.css
+++ b/style.css
@@ -402,13 +402,15 @@
 	flex-direction: rows;
     overflow-x: hidden;
 	position: relative;
-	border-radius: 10px;}
+	border-radius: 10px;
+         transition: 0.3s ease;}
 	
   .home .banner .images .image{
 	width: 103%;
 	height: 100%;
 	cursor: pointer;
-    border-radius: 10px;}
+    border-radius: 10px;
+  transition: 0.3s ease;}
 /*<!--banner ends from here-->*/
 
 	
